--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
   ],
   "dependencies": {
     "angular": "1.5.7",
-    "amcharts3": "^3.20.9"
+    "amcharts3": "^3.20.9",
+    "angular-ui-router": "^0.3.1"
   }
 }
