--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "angular": "1.5.7",
     "amcharts3": "^3.20.9",
     "angular-ui-router": "^0.3.1",
-    "angular-material": "master"
+    "angular-material": "master",
+    "jquery": "^3.1.0"
   }
 }
