--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "amcharts3": "^3.20.9",
     "angular-ui-router": "^0.3.1",
     "angular-material": "master",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "highcharts": "^4.2.5"
   }
 }
