--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "jquery": "^3.1.0",
     "highcharts": "^4.2.5",
     "d3": "3.5.17",
-    "raphael": "1.4.7"
+    "raphael": "1.4.7",
+    "js-marker-clusterer": "*"
   }
 }
